add default variable for moodle_tag

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,3 +15,4 @@ moodle_summary:     "A virtual machine for developing Moodle."
 moodle_plugins:     []
 moodle_plugins_dev: []
 moodle_patches:     []
+moodle_tag:         HEAD
