--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -27,30 +27,54 @@
 - name: Remove git folder
   file: path="{{ moodle_location }}/.git" state=absent
   
+# Install moodle if an import is not specified
 - name: Remove the moodle database if it exists
   mysql_db: name={{ moodle_db_name }} state=absent
   
 - name: Create the moodle database
   mysql_db: name={{ moodle_db_name }} state=present
   
+# Write the config file.
+# 
+# If a moodle database import file is specified and the moodle version is 2.9 or
+# greater, then the database is not set up thanks to the "--skip-database" 
+# option introduced in Moodle 2.9. Otherwise, the database is set up and if 
+# a database import is specified, then it is later overwritten.
 - name: Install Moodle
   sudo: yes
   sudo_user: "{{ apache_user }}"
-  command: php admin/cli/install.php \
-    --lang=en \
-    --wwwroot={{ moodle_wwwroot }} \
-    --dataroot={{ moodle_dataroot }} \
-    --dbname={{ moodle_db_name }} \
-    --dbuser={{ moodle_db_username }} \
-    --dbpass={{ moodle_db_password }} \
-    --adminuser={{ moodle_adminuser }} \
-    --adminpass={{ moodle_adminpass }} \
-    {% if moodle_version > 2.8 %}--adminemail='{{ moodle_adminemail }}'{% endif %} \
-    --fullname='{{ moodle_fullname }}' \
-    --shortname={{ moodle_shortname }} \
-    {% if moodle_version > 2.8 %}--summary='{{ moodle_summary }}'{% endif %} \
-    --non-interactive \
+  command: php admin/cli/install.php
+    --lang=en
+    --wwwroot={{ moodle_wwwroot }}
+    --dataroot={{ moodle_dataroot }}
+    --dbname={{ moodle_db_name }}
+    --dbuser={{ moodle_db_username }}
+    --dbpass={{ moodle_db_password }}
+    --adminuser={{ moodle_adminuser }}
+    --adminpass={{ moodle_adminpass }}
+    --fullname='{{ moodle_fullname }}'
+    --shortname={{ moodle_shortname }}
+    --non-interactive
     --agree-license
+    {% if moodle_version > 2.8 %}
+      --adminemail='{{ moodle_adminemail }}'
+      --summary='{{ moodle_summary }}'
+    {% endif %}
+    {% if moodle_db_import is defined and moodle_version > 2.8 %}
+      --skip-database
+    {% endif %}
   args:
     chdir: "{{ moodle_location }}"
     creates: config.php
+
+# Import a database dump
+- name: Copy the database dump file
+  copy: src={{ playbook_dir }}/{{ moodle_db_import }} dest=/tmp
+  when: moodle_db_import is defined
+
+- name: Import a Moodle database dump
+  mysql_db: 
+    name: "{{ moodle_db_name }}"
+    state: import 
+    target: "/tmp/{{ moodle_db_import | regex_replace( moodle_db_import | dirname , '')  }}"
+  when: moodle_db_import is defined
