Add conditionals to tasks

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,8 @@
 
 # Install Moodle
 - include: install.yml
+  when: moodle_assemble_only == false
 
 # Copy dev plugins to Moodle
 - include: plugin_dev.yml
+  when: moodle_plugins_dev|length > 0
