--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -27,6 +27,7 @@
     --fullname='{{ moodle_fullname }}'
     --shortname={{ moodle_shortname }}
     --non-interactive
+    --allow-unstable
     --agree-license
     {% if moodle_version > 2.8 %}
       --adminemail='{{ moodle_adminemail }}'
