--- a/tasks/prerequisites.yml
+++ b/tasks/prerequisites.yml
@@ -1,6 +1,9 @@
 ---
+- name: Manually update apt cache
+  command: apt-get update
+
 - name: Install prerequisites
-  apt: name={{ item }}
+  apt: name={{ item }} update_cache=yes
   with_items:
     - git
     - unzip
