--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,6 +21,11 @@ moodle_config_dir:        /srv/moodle_config
 moodle_manifest:          null
 moodle_tasc_extra_params: []
 moodle_assemble_only:     false
+moodle_install_owner:     root
+moodle_install_group:     root
+moodle_data_owner:        root
+moodle_data_group:        root
+moodle_pytasc_executable: /srv/tasc/py_tasc.py
 
 # The default installation method is git. Acceptable values are git, local and 
 # manifest.
